# BC3415-Group-Project

./: .dev.env  README.md  pyproject.toml
ai_travel_agent/app/: main.py  telegram_bot.py
ai_travel_agent/app/core/: settings.py
ai_travel_agent/app/services/assistants/: assistant_base.py  primary_assistant.py
ai_travel_agent/app/services/tools/: flights.py
vectorizer/: README.md
vectorizer/app/: main.py
vectorizer/app/embeddings/: embedding_generator.py
vectorizer/app/vectordb/: vectordb.py
